--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Laravel App to cPanel
 on:
   push:
     branches:
-      - master # Change this to your main branch if needed
+      - main # Change this to your main branch if needed
 
 jobs:
   deploy:
@@ -24,7 +24,7 @@ jobs:
         run: |
           ssh speechth@cstarbd.com <<EOF
             cd cstarbd.com  # Change to your Laravel project directory
-            git pull origin master   # Pull latest code
+            git pull origin main   # Pull latest code
             composer install --no-dev --optimize-autoloader
             php artisan migrate --force
             php artisan config:clear
