--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,10 @@
-name: Deploy Laravel to cPanel via FTP
-
-on:
-  push:
-    branches:
-      - main # Change to your branch if needed
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Deploy via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-        with:
-          server: ${{ secrets.SERVER }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          protocol: ftp
-          port: ${{ secrets.PORT }}
-          local-dir: ./
-          timeout: 60000
+- name: Deploy via SFTP
+  uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+  with:
+    server: ${{ secrets.HOST }}
+    username: ${{ secrets.USERNAME }}
+    password: ${{ secrets.PASSWORD }}
+    protocol: sftp # Use SFTP instead of FTP
+    port: 22 # SFTP default port
+    passive: true
+    timeout: 300000
