--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
           port: ${{ secrets.PORT }}
           local-dir: ./
           server-dir: /public_html/ #
+          timeout: 300000
+          log-level: verbose
           exclude: |
             **/.git*
             **/.github*
